# langextract-demo

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
data/: invoice.txt  job_application_email.txt
langextract_demo/: __main__.py  extractor.py  extractor_invoice.py  extractor_job.py
